--- a/result.html
+++ b/result.html
@@ -10551,16 +10551,16 @@
             'F3':'54E5263F',
             'T':'1589442239',
                         'y':'FFB95FFF'
-                                                }" href="javascript:;" target="_self">{{替换标题1}}</a></h3>
+                                                }" href="javascript:;" target="_self">{{标题1}}</a></h3>
                     <div class="c-row c-gap-top-small">
                         <div class="general_image_pic c-span6"><a class="c-img6" style="height:75px" href="javascript:;"
                                                                   target="_self"><img class="c-img c-img6"
                                                                                       src="images/pic1.jpg"
                                                                                       style="height:75px;"></a></div>
                         <div class="c-span18 c-span-last">
-                            <div class="c-abstract">{{替换段落1-1}}</div>
+                            <div class="c-abstract">化妆是的你</div>
                             <div class="f13"><a target="_self" href="javascript:;" class="c-showurl"
-                                                style="text-decoration:none;">https://i.{{小侯}}.cn/&nbsp;</a>
+                                                style="text-decoration:none;">https://i.小侯.cn/&nbsp;</a>
                             </div>
                         </div>
                     </div>
@@ -10572,7 +10572,7 @@
                      data-click="{'p1':'3','rsv_bdr':'0','fm':'albk',rsv_stl:''}">
                     <h3 class="t c-gap-bottom-small">
                         <a href="javascript:;" target="_self">
-                            <em>{{替换标题2}}</em></a>
+                            <em>吃饭时的你</em></a>
                     </h3>
                     <div class="c-row">
                         <div class="op-bk-polysemy-video__wrap c-gap-bottom">
@@ -10720,7 +10720,7 @@
                      data-click="{'p1':'6','rsv_bdr':'0','fm':'alop',rsv_stl:'5'}">
                     <h3 class="t c-gap-bottom-small">
                         <a href="javascript:;" target="_self">
-                            {{替换标题3}}</a>
+                            小肥脚</a>
                     </h3>
                     <style>
                         .op-tieba-general-mainpic {
@@ -10956,7 +10956,7 @@
     </div>
 </div>
 <audio id="music" autoplay="autoplay" loop="loop">
-    <source src="./bgMusic.mp3" type="audio/mpeg">
+    <source src="./bgMusic.aac" type="audio/mpeg">
 </audio>
 <script type="text/javascript"
         src="https://dss1.bdstatic.com/5eN1bjq8AAUYm2zgoY3K/r/www/cache/static/protocol/https/jquery/jquery-1.10.2.min_65682a2.js"></script>
