--- a/result.html
+++ b/result.html
@@ -9713,7 +9713,7 @@
                                                                                                class="s_ipt"
                                                                                                maxlength="255"
                                                                                                autocomplete="off"
-                                                                                               value="{{小侯}}"></span><span
+                                                                                               value="小侯"></span><span
                             class="bg s_btn_wr"><input type="submit" id="su" value="百度一下" class="bg s_btn"></span><span
                             class="tools"><span id="mHolder">
                                     <div id="mCon"><span>输入法</span></div>
@@ -10551,14 +10551,14 @@
             'F3':'54E5263F',
             'T':'1589442239',
                         'y':'FFB95FFF'
-                                                }" href="javascript:;" target="_self">{{标题1}}</a></h3>
+                                                }" href="javascript:;" target="_self">漂亮的你</a></h3>
                     <div class="c-row c-gap-top-small">
                         <div class="general_image_pic c-span6"><a class="c-img6" style="height:75px" href="javascript:;"
                                                                   target="_self"><img class="c-img c-img6"
                                                                                       src="images/pic1.jpg"
                                                                                       style="height:75px;"></a></div>
                         <div class="c-span18 c-span-last">
-                            <div class="c-abstract">化妆是的你</div>
+                            <div class="c-abstract">化妆时的你</div>
                             <div class="f13"><a target="_self" href="javascript:;" class="c-showurl"
                                                 style="text-decoration:none;">https://i.小侯.cn/&nbsp;</a>
                             </div>
@@ -10599,7 +10599,7 @@
                             </div>
                         </div>
                         <div class="c-span18 c-span-last">
-                            <p>{{替换段落2-1}}</p>
+                            <p>等饭中。。。。</p>
                             <p>
                                 <a class="c-gap-right-small op-se-listen-recommend" href="javascript:;" target="_self"
                                    title="可爱">可爱</a>
@@ -10612,7 +10612,7 @@
                                 <a class="c-gap-right-small op-se-listen-recommend" href="javascript:;" target="_self"
                                    title="安静">安静</a>
                             </p>
-                            <p class=" op-bk-polysemy-move"><span class="c-showurl">https://love.{{小侯}}.com/ </span>
+                            <p class=" op-bk-polysemy-move"><span class="c-showurl">https://love.小侯.com/ </span>
                             </p>
                         </div>
                     </div>
@@ -10656,14 +10656,14 @@
             'F3':'54E5263F',
             'T':'1589442239',
                         'y':'BFEDEDBA'
-                                                }" href="javascript:;" target="_self">{{替换标题5}}</a></h3>
+                                                }" href="javascript:;" target="_self">你带大长腿</a></h3>
                     <div class="c-row c-gap-top-small">
                         <div class="general_image_pic c-span6"><a class="c-img6" style="height:75px" href="javascript:;"
                                                                   target="_self"><img class="c-img c-img6"
                                                                                       src="images/pic3.jpg"
                                                                                       style="height:75px;"></a></div>
                         <div class="c-span18 c-span-last">
-                            <div class="c-abstract">{{替换段落5-1}}</div>
+                            <div class="c-abstract">漂亮</div>
                             <div class="f13"><a target="_self" href="javascript:;" class="c-showurl"
                                                 style="text-decoration:none;">
                                 <style>.nor-src-wrap {
@@ -10708,7 +10708,7 @@
                                 .nor-src-icon-v.vicon-3 {
                                     background-image: url(https://b.bdstatic.com/searchbox/icms/searchbox/img/yellow-v.png);
                                 }</style>
-                                <span class="nor-src-wrap">https://you.{{小侯}}.com/</span>
+                                <span class="nor-src-wrap">https://you.小侯.com/</span>
                             </a>
 
                             </div>
@@ -10761,7 +10761,7 @@
                         <tr>
                             <td class="op-tieba-general-firsttd op-tieba-general-mainpl"><a href="javascript:;"
                                                                                             target="_self"
-                                                                                            class="op-tieba-general-linktxt">{{替换内容3-1}}</a>
+                                                                                            class="op-tieba-general-linktxt">上能提天</a>
                             </td>
                             <td class="op-tieba-general-graycolor"><span class="c-gap-right-small">点击：<i
                                     class="op-mthread1-clicknum">1314</i></span></td>
@@ -10771,7 +10771,7 @@
                         <tr>
                             <td class="op-tieba-general-firsttd op-tieba-general-mainpl"><a href="javascript:;"
                                                                                             target="_self"
-                                                                                            class="op-tieba-general-linktxt">{{替换内容3-2}}</a>
+                                                                                            class="op-tieba-general-linktxt">下能踹底</a>
                             </td>
                             <td class="op-tieba-general-graycolor"><span class="c-gap-right-small">点击：<i
                                     class="op-mthread2-clicknum">139</i></span></td>
@@ -10781,7 +10781,7 @@
                         <tr>
                             <td class="op-tieba-general-firsttd op-tieba-general-mainpl"><a href="javascript:;"
                                                                                             target="_self"
-                                                                                            class="op-tieba-general-linktxt">{{替换内容3-3}}</a>
+                                                                                            class="op-tieba-general-linktxt">行走在荆棘之路上</a>
                             </td>
                             <td class="op-tieba-general-graycolor"><span class="c-gap-right-small">点击：<i
                                     class="op-mthread3-clicknum">19</i></span></td>
@@ -10835,37 +10835,15 @@
                      data-op="{'y':'F5FEFFF9'}" data-click="{'p1':'7','rsv_bdr':'0','fm':'alop',rsv_stl:'5'}">
                     <h3 class="t">
                         <a href="javascript:;" target="_self">
-                            {{替换标题4}}</a>
+                            未完待续</a>
                     </h3>
                     <div class="c-offset">
                         <div class="c-row">
-                            <span style="color:#666;float:right">{{替换日期4-1}}</span>
+                            <span style="color:#666;float:right"></span>
                             <a href="javascript:;" target="_self">
                                 {{替换内容4-1}}</a>
                             &nbsp;<span style="color:pink">{{替换短语4-1}}</span>
                             <br>{{替换段落4-1}}
-                        </div>
-                        <div class="c-row">
-                            <span style="color:#666;float:right">{{替换日期4-2}}</span>
-                            <a href="javascript:;" target="_self">{{替换内容4-2}}
-                            </a>
-                            &nbsp;<span style="color:pink">{{替换短语4-2}}</span>
-                        </div>
-                        <div class="c-row">
-                            <span style="color:#666;float:right">{{替换日期4-3}}</span>
-                            <a href="javascript:;" target="_self">
-                                {{替换内容4-3}}</a>
-                            &nbsp;<span style="color:pink">{{替换短语4-3}}</span>
-                        </div>
-                        <div class="c-row">
-                            <span style="color:#666;float:right">{{替换日期4-4}}</span>
-                            <a href="javascript:;" target="_self">{{替换内容4-4}}</a>
-                            &nbsp;<span style="color:pink">{{替换短语4-4}}</span>
-                        </div>
-                        <div class="c-row">
-                            <span style="color:#666;float:right">{{替换日期4-5}}</span>
-                            <a href="javascript:;" target="_self">{{替换内容4-5}}</a>
-                            &nbsp;<span style="color:pink">{{替换短语4-5}}</span>
                         </div>
                     </div>
                 </div>
